--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -144,7 +144,7 @@
     "enter_new_url_bind_to": { "message": "Enter a new URL to bind to" },
     "group_rebind_successful": { "message": "Group rebind successful" },
     "url_must_start_with_http": {
-        "message": "URL must start with http:// or https://"
+        "message": "URL must start with https://"
     },
     "select_emoji": { "message": "Select emoji" },
     "select_image": { "message": "Select image" },
