--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -167,7 +167,7 @@
     },
     "all_groups_deleted": { "message": "Все группы удалены" },
     "show_private_groups_incognito": {
-        "message": "Показывать приватные группы только в режиме инкогнито браузера. В обычном режиме они будут скрыты"
+        "message": "Скрывать приватные группы везде, кроме окон в режиме инкогнито (приватных)"
     },
     "settings_saved": { "message": "Настройки сохранены" },
     "go_to_settings_and_enable_allow_incognito": {
@@ -177,7 +177,7 @@
         "message": "Если имя новой группы совпадает с существующим, замените его"
     },
     "only_private_groups_incognito": {
-        "message": "Показывать только приватные группы в режиме инкогнито браузера"
+        "message": "Скрыть публичные группы из окон браузера в режиме инкогнито (приватном режиме)"
     },
     "export_tab_groups": { "message": "Экспортировать группы вкладок" },
     "export_all_your_groups": {
