feat: you can change password on private group now
closes $41

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -203,5 +203,6 @@
     "tab_pasted": { "message": "The tab was pasted in the current group" },
     "your_emoji_is": { "message": "Your emoji is" },
     "image_format_allowed": { "message": "Images are only allowed with these formats" },
+    "new_password": { "message": "New password" },
     "nothing_to_paste": { "message": "There is nothing to paste" }
 }
