--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -203,5 +203,6 @@
     "your_emoji_is": { "message": "Ваш эмодзи" },
     "image_format_allowed": { "message": "Только изображения таких форматов разрешены" },
     "new_password": { "message": "Новый пароль" },
+    "uses_old_encrypt_impl": { "message": "Эта группа использует старую реализацию шифрования. Вы можете исправить это, разблокировав эту группу и заблокировав ее обратно." },
     "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" }
 }
