feat: add new option to settings for remembering pass
closes #62

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -209,5 +209,7 @@
     "image_format_allowed": { "message": "Только изображения таких форматов разрешены" },
     "new_password": { "message": "Новый пароль" },
     "uses_old_encrypt_impl": { "message": "Эта группа использует старую реализацию шифрования. Вы можете исправить это, разблокировав эту группу и заблокировав ее обратно." },
-    "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" }
+    "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" },
+    "remember_pass_after_unlock": { "message": "Запомнить мой пароль после разблокировки" },
+    "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
