--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -211,5 +211,7 @@
     "image_format_allowed": { "message": "Images are only allowed with these formats" },
     "new_password": { "message": "New password" },
     "uses_old_encrypt_impl": { "message": "This group uses the old encryption implementation. You can fix it by unlocking this group and locking it back" },
-    "nothing_to_paste": { "message": "There is nothing to paste" }
+    "nothing_to_paste": { "message": "There is nothing to paste" },
+    "remember_pass_after_unlock": { "message": "Remember my password after unlock" },
+    "remember_pass_after_unlock_desc": { "message": "If you disable this option, you will need to enter a password everytime when you want to lock any private group. Keeping this option enabled saves password in temporary and secure storage and allows you to lock groups back without entering your password" }
 }
