--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -185,7 +185,7 @@
         "message": "Скрыть публичные группы из окон браузера в режиме инкогнито (приватном режиме)"
     },
     "export_tab_groups": { "message": "Экспортировать группы вкладок" },
-    "export_all_your_groups": {
+    "export_tab_groups_desc": {
         "message": "Экспортируйте все группы вкладок. Приватные группы не будут экспортированы. Чтобы экспортировать их, сделайте это для каждой группы отдельно"
     },
     "no_groups_export": { "message": "Нет групп для экспорта" },
