--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -143,7 +143,6 @@
     "type_any_image_url_to_set_it": {
         "message": "输入任何图片 URL 将其设置为组图标"
     },
-    "change_the_conf_here": { "message": "在此更改扩展配置" },
     "lock_group_after_restore": { "message": "恢复标签页后重新锁定组" },
     "erase_all_groups": { "message": "删除所有组" },
     "i_confirm_want_delete_groups": { "message": "我确认要删除所有组" },
@@ -182,6 +181,8 @@
     "new_password": { "message": "新密码" },
     "uses_old_encrypt_impl": { "message": "该组使用旧版加密实现。您可以通过解锁该组再重新锁定来修复此问题" },
     "nothing_to_paste": { "message": "没有内容可粘贴" },
+    "general": { "message": "总则" },
+    "data_control": { "message": "数据控制" },
     "remember_pass_after_unlock": { "message": "解锁后记住我的密码" },
     "remember_pass_after_unlock_desc": { "message": "若禁用此选项，每次锁定私人群组时均需输入密码。保持此选项启用状态，系统会将密码存储在临时且安全的存储空间中，您无需再次输入密码即可重新锁定群组" }
 }
