--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -159,7 +159,6 @@
     "type_any_image_url_to_set_it": {
         "message": "Введите URL изображения, чтобы установить его в качестве значка группы"
     },
-    "change_the_conf_here": { "message": "Измените настройки расширения здесь" },
     "lock_group_after_restore": {
         "message": "Заблокировать группу после восстановления вкладок"
     },
@@ -210,6 +209,8 @@
     "new_password": { "message": "Новый пароль" },
     "uses_old_encrypt_impl": { "message": "Эта группа использует старую реализацию шифрования. Вы можете исправить это, разблокировав эту группу и заблокировав ее обратно." },
     "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" },
+    "general": { "message": "Общее" },
+    "data_control": { "message": "Управление Данными" },
     "remember_pass_after_unlock": { "message": "Запомнить мой пароль после разблокировки" },
     "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
