--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -163,6 +163,7 @@
         "message": "Заблокировать группу после восстановления вкладок"
     },
     "erase_all_groups": { "message": "Удалить все группы" },
+    "erase_all_groups_desc": { "message": "После удаления всех групп вы не сможете их восстановить. Это действие также приведет к удалению всех ваших приватных групп." },
     "i_confirm_want_delete_groups": {
         "message": "Я подтверждаю, что хочу удалить все группы"
     },
