--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -5,6 +5,12 @@
             "n": { "content": "$1" }
         }
     },
+    "clear_cache_desc": {
+        "message": "Освободить $n$ байт кэша без потери данных. Это абсолютно безопасно и рекомендуется сделать.",
+        "placeholders": {
+            "n": { "content": "$1" }
+        }
+    },
     "not_enough_storage": {
         "message": "Нельзя превышать квоту хранения. Максимальная квота составляет $n$ МБ, вы используете $n$ МБ",
         "placeholders": {
@@ -186,12 +192,12 @@
     },
     "export_tab_groups": { "message": "Экспортировать группы вкладок" },
     "export_tab_groups_desc": {
-        "message": "Экспортируйте все группы вкладок. Приватные группы не будут экспортированы. Чтобы экспортировать их, сделайте это для каждой группы отдельно"
+        "message": "Экспортируйте все группы вкладок. Приватные группы не будут экспортированы. Чтобы экспортировать их, сделайте это для каждой группы отдельно."
     },
     "no_groups_export": { "message": "Нет групп для экспорта" },
     "import_groups": { "message": "Импортировать группы вкладок" },
     "import_private_public_groups": {
-        "message": "Импортировать приватные или публичные группы вкладок"
+        "message": "Импортировать приватные или публичные группы вкладок."
     },
     "choose_exported_file": { "message": "Выберите экспортированный файл" },
     "choose_file_import": { "message": "Пожалуйста, выберите файл для импорта" },
@@ -212,6 +218,7 @@
     "nothing_to_paste": { "message": "Нет ничего, чтобы вставить" },
     "general": { "message": "Общее" },
     "data_control": { "message": "Управление Данными" },
+    "clear_cache": { "message": "Удалить Кеш" },
     "remember_pass_after_unlock": { "message": "Запомнить мой пароль после разблокировки" },
     "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
