--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -11,6 +11,12 @@
             "n": { "content": "$1" }
         }
     },
+    "cache_cleared_on": {
+        "message": "Your cache was cleared on $n$ bytes",
+        "placeholders": {
+            "n": { "content": "$1" }
+        }
+    },
     "not_enough_storage": {
         "message": "Cannot exceed storage quota. Maximum quota is $n$ MB, you use $n$ MB",
         "placeholders": {
