--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -11,6 +11,12 @@
             "n": { "content": "$1" }
         }
     },
+    "cache_cleared_on": {
+        "message": "您的缓存已清除，共清除 $n$ 字节",
+        "placeholders": {
+            "n": { "content": "$1" }
+        }
+    },
     "not_enough_storage": {
         "message": "存储配额已满。最大配额为 $n$ 兆字节，您已使用 $n$ 兆字节",
         "placeholders": {
