--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -194,7 +194,7 @@
         "message": "Если имя новой группы совпадает с существующим, замените его"
     },
     "only_private_groups_incognito": {
-        "message": "Скрыть публичные группы из окон браузера в режиме инкогнито (приватном режиме)"
+        "message": "Скрыть открытые группы из окон браузера в режиме инкогнито (приватном режиме)"
     },
     "export_tab_groups": { "message": "Экспортировать группы вкладок" },
     "export_tab_groups_desc": {
@@ -202,8 +202,8 @@
     },
     "no_groups_export": { "message": "Нет групп для экспорта" },
     "import_groups": { "message": "Импортировать группы вкладок" },
-    "import_private_public_groups": {
-        "message": "Импортировать приватные или публичные группы вкладок."
+    "import_private_and_open_groups": {
+        "message": "Импортировать приватные и открытые группы."
     },
     "choose_exported_file": { "message": "Выберите экспортированный файл" },
     "choose_file_import": { "message": "Пожалуйста, выберите файл для импорта" },
@@ -226,5 +226,7 @@
     "data_control": { "message": "Управление Данными" },
     "clear_cache": { "message": "Удалить Кеш" },
     "remember_pass_after_unlock": { "message": "Запомнить мой пароль после разблокировки" },
+    "make_group_open": { "message": "Сделать группу открытой" },
+    "are_you_sure_to_make_group_open": { "message": "Вы уверены, что хотите сделать эту группу открытой? Это означает, что для доступа к этой группе не нужно вводить пароль" },
     "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
