feat: add making private groups public closes #69

--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -228,5 +228,6 @@
     "remember_pass_after_unlock": { "message": "Запомнить мой пароль после разблокировки" },
     "make_group_open": { "message": "Сделать группу открытой" },
     "are_you_sure_to_make_group_open": { "message": "Вы уверены, что хотите сделать эту группу открытой? Это означает, что для доступа к этой группе не нужно вводить пароль" },
+    "group_is_now_open": { "message": "Эта группа теперь открыта" },
     "remember_pass_after_unlock_desc": { "message": "Если вы отключите эту опцию, вам нужно будет вводить пароль каждый раз, когда вы захотите заблокировать любую приватную группу. Если оставить эту опцию включенной, пароль будет сохранен во временном и безопасном хранилище, и вы сможете заблокировать группы, не вводя пароль" }
 }
