--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -228,5 +228,6 @@
     "remember_pass_after_unlock": { "message": "Remember my password after unlock" },
     "make_group_open": { "message": "Make group open" },
     "are_you_sure_to_make_group_open": { "message": "Are you sure you want to make this group open? It means that you don't need to enter a password to access this group" },
+    "group_is_now_open": { "message": "This group is now open" },
     "remember_pass_after_unlock_desc": { "message": "If you disable this option, you will need to enter a password everytime when you want to lock any private group. Keeping this option enabled saves password in temporary and secure storage and allows you to lock groups back without entering your password" }
 }
