--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -200,5 +200,6 @@
     "remember_pass_after_unlock": { "message": "解锁后记住我的密码" },
     "make_group_open": { "message": "设置为公开群组" },
     "are_you_sure_to_make_group_open": { "message": "您确定要将此群组设为公开吗？这意味着访问该群组时无需输入密码" },
+    "group_is_now_open": { "message": "该小组现已开放" },
     "remember_pass_after_unlock_desc": { "message": "若禁用此选项，每次锁定私人群组时均需输入密码。保持此选项启用状态，系统会将密码存储在临时且安全的存储空间中，您无需再次输入密码即可重新锁定群组" }
 }
