--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -5,6 +5,12 @@
             "n": { "content": "$1" }
         }
     },
+    "you_have_unlocked_groups": {
+        "message": "У вас есть $n$ разблокированных приватных групп. Не забудьте заблокировать их обратно, когда это понадобится.",
+        "placeholders": {
+            "n": { "content": "$1" }
+        }
+    },
     "clear_cache_desc": {
         "message": "Освободить $n$ байт кэша без потери данных. Это абсолютно безопасно и рекомендуется сделать.",
         "placeholders": {
