--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -6,7 +6,7 @@
         }
     },
     "you_have_unlocked_groups": {
-        "message": "У вас есть $n$ разблокированных приватных групп. Не забудьте заблокировать их обратно, когда это понадобится.",
+        "message": "У вас есть $n$ разблокированных приватных групп. Не забудьте заблокировать их обратно, когда они вам больше не понадобятся.",
         "placeholders": {
             "n": { "content": "$1" }
         }
