--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -6,7 +6,7 @@
         }
     },
     "you_have_unlocked_groups": {
-        "message": "您当前拥有$n$个未锁定的私人群组。请务必在需要时及时重新锁定它们。",
+        "message": "您当前拥有$n$个未锁定的私人群组。请务必在不再需要时将其重新锁定。",
         "placeholders": {
             "n": { "content": "$1" }
         }
